@@ -45,5 +45,5 @@
       },
       "homepage" : "https://metacpan.org/release/Test-WriteVariants"
    },
-   "version" : "0.002"
+   "version" : "0.003"
 }
