@@ -24,4 +24,4 @@ requires:
 resources:
   bugtracker: https://github.com/timbunce/Test-WriteVariants/issues
   homepage: https://metacpan.org/release/Test-WriteVariants
-version: 0.002
+version: 0.003
